pkg/plugins/runtime/gateway/testdata/13-gateway-route.yaml
Clusters:
  Resources:
    echo-exact:
      circuitBreakers:
        thresholds:
        - maxConnections: 1024
          maxPendingRequests: 1024
          maxRequests: 1024
          maxRetries: 3
      connectTimeout: 5s
      edsClusterConfig:
        edsConfig:
          ads: {}
          resourceApiVersion: V3
      name: echo-exact
      outlierDetection:
        enforcingConsecutive5xx: 0
        enforcingConsecutiveGatewayFailure: 0
        enforcingConsecutiveLocalOriginFailure: 0
        enforcingFailurePercentage: 0
        enforcingSuccessRate: 0
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            idleTimeout: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
    echo-prefix:
      circuitBreakers:
        thresholds:
        - maxConnections: 1024
          maxPendingRequests: 1024
          maxRequests: 1024
          maxRetries: 3
      connectTimeout: 5s
      edsClusterConfig:
        edsConfig:
          ads: {}
          resourceApiVersion: V3
      name: echo-prefix
      outlierDetection:
        enforcingConsecutive5xx: 0
        enforcingConsecutiveGatewayFailure: 0
        enforcingConsecutiveLocalOriginFailure: 0
        enforcingFailurePercentage: 0
        enforcingSuccessRate: 0
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            idleTimeout: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
    echo-regex:
      circuitBreakers:
        thresholds:
        - maxConnections: 1024
          maxPendingRequests: 1024
          maxRequests: 1024
          maxRetries: 3
      connectTimeout: 5s
      edsClusterConfig:
        edsConfig:
          ads: {}
          resourceApiVersion: V3
      name: echo-regex
      outlierDetection:
        enforcingConsecutive5xx: 0
        enforcingConsecutiveGatewayFailure: 0
        enforcingConsecutiveLocalOriginFailure: 0
        enforcingFailurePercentage: 0
        enforcingSuccessRate: 0
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            idleTimeout: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
Endpoints:
  Resources:
    echo-exact:
      clusterName: echo-exact
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: 192.168.1.2
                portValue: 20002
          loadBalancingWeight: 1
          metadata:
            filterMetadata:
              envoy.lb:
                kuma.io/protocol: http
              envoy.transport_socket_match:
                kuma.io/protocol: http
    echo-prefix:
      clusterName: echo-prefix
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: 192.168.1.4
                portValue: 20004
          loadBalancingWeight: 1
          metadata:
            filterMetadata:
              envoy.lb:
                kuma.io/protocol: http
              envoy.transport_socket_match:
                kuma.io/protocol: http
    echo-regex:
      clusterName: echo-regex
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: 192.168.1.5
                portValue: 20005
          loadBalancingWeight: 1
          metadata:
            filterMetadata:
              envoy.lb:
                kuma.io/protocol: http
              envoy.transport_socket_match:
                kuma.io/protocol: http
Listeners:
  Resources:
    edge-gateway:HTTP:8080:
      address:
        socketAddress:
          address: 192.168.1.1
          portValue: 8080
      enableReusePort: true
      filterChains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            commonHttpProtocolOptions:
              headersWithUnderscoresAction: REJECT_REQUEST
              idleTimeout: 300s
            http2ProtocolOptions:
              allowConnect: true
              initialConnectionWindowSize: 1048576
              initialStreamWindowSize: 65536
              maxConcurrentStreams: 100
            httpFilters:
            - name: envoy.filters.http.router
            mergeSlashes: true
            normalizePath: true
            rds:
              configSource:
                ads: {}
                resourceApiVersion: V3
              routeConfigName: edge-gateway:HTTP:8080
            requestHeadersTimeout: 0.500s
            serverName: Kuma Gateway
            statPrefix: gateway-default
            streamIdleTimeout: 5s
            stripAnyHostPort: true
      listenerFilters:
      - name: envoy.filters.listener.tls_inspector
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: edge-gateway:HTTP:8080
      perConnectionBufferLimitBytes: 32768
      trafficDirection: INBOUND
Routes:
  Resources:
    edge-gateway:HTTP:8080:
      name: edge-gateway:HTTP:8080
      requestHeadersToRemove:
      - x-kuma-tags
      validateClusters: false
      virtualHosts:
      - domains:
        - echo.example.com
        name: edge-gateway:HTTP:8080:echo.example.com
        routes:
        - match:
            path: /match/bar
          route:
            weightedClusters:
              clusters:
              - name: echo-exact
                weight: 1
              totalWeight: 1
        - match:
            path: /match/baz
          route:
            weightedClusters:
              clusters:
              - name: echo-prefix
                weight: 1
              totalWeight: 1
        - match:
            prefix: /match/baz/
          route:
            weightedClusters:
              clusters:
              - name: echo-prefix
                weight: 1
              totalWeight: 1
        - match:
            safeRegex:
              googleRe2: {}
              regex: /match/foo
          route:
            weightedClusters:
              clusters:
              - name: echo-regex
                weight: 1
              totalWeight: 1
Runtimes:
  Resources: {}
Secrets:
  Resources: {}
